Bug 291075 - plasma-desktop crashes when choosing a custom icon for an activity
Summary: plasma-desktop crashes when choosing a custom icon for an activity
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 294115 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-09 19:19 UTC by Alvaro Manuel Recio Perez
Modified: 2012-02-15 02:43 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (12.16 KB, text/plain)
2012-01-12 19:28 UTC, Andreas Kuhl
Details
New crash information added by DrKonqi (14.46 KB, text/plain)
2012-01-29 16:46 UTC, Sascha Manns
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alvaro Manuel Recio Perez 2012-01-09 19:19:38 UTC
Application: plasma-desktop (0.4)
KDE Platform Version: 4.7.97 (4.8 RC2 (4.7.97)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-14-generic x86_64
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:

I tried to choose a custom icon using the activity bar. The exact steps were:
1. Opened the activity bar.
2. Opened the options for an activity by clicking the wrench icon.
3. Clicked its icon.
4. Clicked "Other icons" and then clicked "Browse...".
5. plasma-destkop crashed.

The crash can be reproduced every time.

-- Backtrace:
Application: Shell de escritorio Plasma (plasma-desktop), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f6af04e57c0 (LWP 1905))]

Thread 5 (Thread 0x7f6ac5bf4700 (LWP 1911)):
#0  0x00007f6ae410f3f1 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f6aecfe8f3e in QEventDispatcherGlib::processEvents (this=0x1a85a10, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#2  0x00007f6aecfbccf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#3  0x00007f6aecfbcef7 in QEventLoop::exec (this=0x7f6ac5bf3cd0, flags=...) at kernel/qeventloop.cpp:201
#4  0x00007f6aeced427f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#5  0x00007f6aecf9fcbf in QInotifyFileSystemWatcherEngine::run (this=0x1a84450) at io/qfilesystemwatcher_inotify.cpp:248
#6  0x00007f6aeced6d05 in QThreadPrivate::start (arg=0x1a84450) at thread/qthread_unix.cpp:331
#7  0x00007f6ae142856c in ?? () from /usr/lib/nvidia-current/libGL.so.1
#8  0x00007f6ae4c1befc in start_thread (arg=0x7f6ac5bf4700) at pthread_create.c:304
#9  0x00007f6aefdd689d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#10 0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7f6ac31a4700 (LWP 1912)):
#0  0x00007f6aefdca773 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f6ae410ef68 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f6ae410f429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f6aecfe8f3e in QEventDispatcherGlib::processEvents (this=0x1b35b00, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f6aecfbccf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f6aecfbcef7 in QEventLoop::exec (this=0x7f6ac31a3cd0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007f6aeced427f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#7  0x00007f6aecf9fcbf in QInotifyFileSystemWatcherEngine::run (this=0x1b2d4c0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f6aeced6d05 in QThreadPrivate::start (arg=0x1b2d4c0) at thread/qthread_unix.cpp:331
#9  0x00007f6ae142856c in ?? () from /usr/lib/nvidia-current/libGL.so.1
#10 0x00007f6ae4c1befc in start_thread (arg=0x7f6ac31a4700) at pthread_create.c:304
#11 0x00007f6aefdd689d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f6ac26c0700 (LWP 1913)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f6ae9fedfe2 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#2  0x00007f6ae9fee019 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#3  0x00007f6ae142856c in ?? () from /usr/lib/nvidia-current/libGL.so.1
#4  0x00007f6ae4c1befc in start_thread (arg=0x7f6ac26c0700) at pthread_create.c:304
#5  0x00007f6aefdd689d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#6  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f6abf2da700 (LWP 1918)):
#0  0x00007f6aefdca773 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f6ae410ef68 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f6ae410f792 in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f6abfdb8516 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007f6ae41342b6 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f6ae142856c in ?? () from /usr/lib/nvidia-current/libGL.so.1
#6  0x00007f6ae4c1befc in start_thread (arg=0x7f6abf2da700) at pthread_create.c:304
#7  0x00007f6aefdd689d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#8  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f6af04e57c0 (LWP 1905)):
[KCrash Handler]
#6  mUSABLe (mem=0x7fff663b3240) at malloc.c:5906
#7  __malloc_usable_size (m=0x7fff663b3240) at malloc.c:4213
#8  0x00007f6ae1428bd3 in ?? () from /usr/lib/nvidia-current/libGL.so.1
#9  0x00007f6adef2a92c in ?? () from /usr/lib/nvidia-current/tls/libnvidia-tls.so.280.13
#10 0x00007f6aecfcfd75 in QObjectPrivate::deleteChildren (this=0x10c12e0) at kernel/qobject.cpp:1955
#11 0x00007f6aec3ba0da in QWidget::~QWidget (this=0x312fe30, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1651
#12 0x00007f6aef52d3e9 in KIconDialog::~KIconDialog (this=0x312fe30, __in_chrg=<optimized out>) at ../../kio/kfile/kicondialog.cpp:490
#13 0x00007f6af00f73ec in ActivityConfiguration::~ActivityConfiguration (this=0x30fa040, __in_chrg=<optimized out>) at ../../../../plasma/desktop/shell/activitymanager/activitycontrols.cpp:137
#14 0x00007f6af00f7499 in ActivityConfiguration::~ActivityConfiguration (this=0x30fa040, __in_chrg=<optimized out>) at ../../../../plasma/desktop/shell/activitymanager/activitycontrols.cpp:140
#15 0x00007f6aec940dc6 in QGraphicsItem::~QGraphicsItem (this=0x30d4870, __in_chrg=<optimized out>) at graphicsview/qgraphicsitem.cpp:1488
#16 0x00007f6aec990540 in ~QGraphicsObject (this=0x30d4860, __in_chrg=<optimized out>) at ../../include/QtGui/../../src/gui/graphicsview/qgraphicsitem.h:547
#17 QGraphicsWidget::~QGraphicsWidget (this=0x30d4860, __in_chrg=<optimized out>) at graphicsview/qgraphicswidget.cpp:232
#18 0x00007f6af00f86a9 in ActivityIcon::~ActivityIcon (this=0x30d4860, __in_chrg=<optimized out>) at ../../../../plasma/desktop/shell/activitymanager/activityicon.cpp:175
#19 0x00007f6aecfcfd75 in QObjectPrivate::deleteChildren (this=0x32d0530) at kernel/qobject.cpp:1955
#20 0x00007f6aecfd5349 in QObject::~QObject (this=0x32c7f50, __in_chrg=<optimized out>) at kernel/qobject.cpp:946
#21 0x00007f6aec990548 in ~QGraphicsObject (this=0x32c7f50, __in_chrg=<optimized out>) at ../../include/QtGui/../../src/gui/graphicsview/qgraphicsitem.h:547
#22 QGraphicsWidget::~QGraphicsWidget (this=0x32c7f50, __in_chrg=<optimized out>) at graphicsview/qgraphicswidget.cpp:232
#23 0x00007f6aec9906c9 in QGraphicsWidget::~QGraphicsWidget (this=0x32c7f50, __in_chrg=<optimized out>) at graphicsview/qgraphicswidget.cpp:277
#24 0x00007f6aec940dc6 in QGraphicsItem::~QGraphicsItem (this=0x31b7c10, __in_chrg=<optimized out>) at graphicsview/qgraphicsitem.cpp:1488
#25 0x00007f6aec990540 in ~QGraphicsObject (this=0x31b7c00, __in_chrg=<optimized out>) at ../../include/QtGui/../../src/gui/graphicsview/qgraphicsitem.h:547
#26 QGraphicsWidget::~QGraphicsWidget (this=0x31b7c00, __in_chrg=<optimized out>) at graphicsview/qgraphicswidget.cpp:232
#27 0x00007f6aec9906c9 in QGraphicsWidget::~QGraphicsWidget (this=0x31b7c00, __in_chrg=<optimized out>) at graphicsview/qgraphicswidget.cpp:277
#28 0x00007f6aec940dc6 in QGraphicsItem::~QGraphicsItem (this=0x2b15e00, __in_chrg=<optimized out>) at graphicsview/qgraphicsitem.cpp:1488
#29 0x00007f6aec990540 in ~QGraphicsObject (this=0x2b15df0, __in_chrg=<optimized out>) at ../../include/QtGui/../../src/gui/graphicsview/qgraphicsitem.h:547
#30 QGraphicsWidget::~QGraphicsWidget (this=0x2b15df0, __in_chrg=<optimized out>) at graphicsview/qgraphicswidget.cpp:232
#31 0x00007f6af00fb1a9 in ActivityList::~ActivityList (this=0x2b15df0, __in_chrg=<optimized out>) at ../../../../plasma/desktop/shell/activitymanager/activitylist.cpp:77
#32 0x00007f6aec940dc6 in QGraphicsItem::~QGraphicsItem (this=0x30b0810, __in_chrg=<optimized out>) at graphicsview/qgraphicsitem.cpp:1488
#33 0x00007f6aec990540 in ~QGraphicsObject (this=0x30b0800, __in_chrg=<optimized out>) at ../../include/QtGui/../../src/gui/graphicsview/qgraphicsitem.h:547
#34 QGraphicsWidget::~QGraphicsWidget (this=0x30b0800, __in_chrg=<optimized out>) at graphicsview/qgraphicswidget.cpp:232
#35 0x00007f6af00f7999 in ActivityManager::~ActivityManager (this=0x30b0800, __in_chrg=<optimized out>) at ../../../../plasma/desktop/shell/activitymanager/activitymanager.cpp:187
#36 0x00007f6af00c6576 in ControllerWindow::~ControllerWindow (this=0x3135dd0, __in_chrg=<optimized out>) at ../../../../plasma/desktop/shell/controllerwindow.cpp:102
#37 0x00007f6af00c65e9 in ControllerWindow::~ControllerWindow (this=0x3135dd0, __in_chrg=<optimized out>) at ../../../../plasma/desktop/shell/controllerwindow.cpp:105
#38 0x00007f6aecfd4a88 in QObject::event (this=0x3135dd0, e=<optimized out>) at kernel/qobject.cpp:1200
#39 0x00007f6aec3be6eb in QWidget::event (this=0x3135dd0, event=0x340b830) at kernel/qwidget.cpp:8754
#40 0x00007f6aec36e424 in notify_helper (e=0x340b830, receiver=0x3135dd0, this=0xea4470) at kernel/qapplication.cpp:4486
#41 QApplicationPrivate::notify_helper (this=0xea4470, receiver=0x3135dd0, e=0x340b830) at kernel/qapplication.cpp:4458
#42 0x00007f6aec373291 in QApplication::notify (this=0xe8ece0, receiver=0x3135dd0, e=0x340b830) at kernel/qapplication.cpp:4365
#43 0x00007f6aedc6cae6 in KApplication::notify (this=0xe8ece0, receiver=0x3135dd0, event=0x340b830) at ../../kdeui/kernel/kapplication.cpp:311
#44 0x00007f6aecfbdafc in QCoreApplication::notifyInternal (this=0xe8ece0, receiver=0x3135dd0, event=0x340b830) at kernel/qcoreapplication.cpp:787
#45 0x00007f6aecfc151f in sendEvent (event=0x340b830, receiver=0x3135dd0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#46 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0xddc430) at kernel/qcoreapplication.cpp:1428
#47 0x00007f6aecfe8a73 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#48 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:277
#49 0x00007f6ae410ea5d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#50 0x00007f6ae410f258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#51 0x00007f6ae410f429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#52 0x00007f6aecfe8ed6 in QEventDispatcherGlib::processEvents (this=0xdddf40, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#53 0x00007f6aec41607e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#54 0x00007f6aecfbccf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#55 0x00007f6aecfbcef7 in QEventLoop::exec (this=0x7fff663b31e0, flags=...) at kernel/qeventloop.cpp:201
#56 0x00007f6aec825216 in QDialog::exec (this=0x7fff663b3240) at dialogs/qdialog.cpp:552
#57 0x00007f6aef52d0f9 in KIconDialog::KIconDialogPrivate::_k_slotBrowse (this=0x1100760) at ../../kio/kfile/kicondialog.cpp:698
#58 0x00007f6aef52ebcd in KIconDialog::qt_metacall (this=0x312fe30, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff663b3420) at ./kicondialog.moc:199
#59 0x00007f6aecfd0eba in QMetaObject::activate (sender=0x10dc050, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff663b3420) at kernel/qobject.cpp:3278
#60 0x00007f6aec9df582 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#61 0x00007f6aec72513e in QAbstractButtonPrivate::emitClicked (this=<optimized out>) at widgets/qabstractbutton.cpp:546
#62 0x00007f6aec72647b in QAbstractButtonPrivate::click (this=0x10c7e90) at widgets/qabstractbutton.cpp:539
#63 0x00007f6aec7266ec in QAbstractButton::mouseReleaseEvent (this=0x10dc050, e=0x7fff663b3b30) at widgets/qabstractbutton.cpp:1121
#64 0x00007f6aec3bec9a in QWidget::event (this=0x10dc050, event=0x7fff663b3b30) at kernel/qwidget.cpp:8295
#65 0x00007f6aec36e424 in notify_helper (e=0x7fff663b3b30, receiver=0x10dc050, this=0xea4470) at kernel/qapplication.cpp:4486
#66 QApplicationPrivate::notify_helper (this=0xea4470, receiver=0x10dc050, e=0x7fff663b3b30) at kernel/qapplication.cpp:4458
#67 0x00007f6aec373c6b in QApplication::notify (this=<optimized out>, receiver=0x10dc050, e=0x7fff663b3b30) at kernel/qapplication.cpp:4047
#68 0x00007f6aedc6cae6 in KApplication::notify (this=0xe8ece0, receiver=0x10dc050, event=0x7fff663b3b30) at ../../kdeui/kernel/kapplication.cpp:311
#69 0x00007f6aecfbdafc in QCoreApplication::notifyInternal (this=0xe8ece0, receiver=0x10dc050, event=0x7fff663b3b30) at kernel/qcoreapplication.cpp:787
#70 0x00007f6aec36f3f2 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#71 QApplicationPrivate::sendMouseEvent (receiver=0x10dc050, event=0x7fff663b3b30, alienWidget=0x10dc050, nativeWidget=0x312fe30, buttonDown=0x10dc050, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3146
#72 0x00007f6aec3ee945 in QETWidget::translateMouseEvent (this=0x312fe30, event=<optimized out>) at kernel/qapplication_x11.cpp:4568
#73 0x00007f6aec3ed8be in QApplication::x11ProcessEvent (this=0xe8ece0, event=0x7fff663b4350) at kernel/qapplication_x11.cpp:3690
#74 0x00007f6aec416412 in x11EventSourceDispatch (s=0xea7f30, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#75 0x00007f6ae410ea5d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#76 0x00007f6ae410f258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#77 0x00007f6ae410f429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#78 0x00007f6aecfe8ed6 in QEventDispatcherGlib::processEvents (this=0xdddf40, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#79 0x00007f6aec41607e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#80 0x00007f6aecfbccf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#81 0x00007f6aecfbcef7 in QEventLoop::exec (this=0x7fff663b4720, flags=...) at kernel/qeventloop.cpp:201
#82 0x00007f6aecfc1789 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#83 0x00007f6af00d57e3 in kdemain (argc=1, argv=0x7fff663b4b08) at ../../../../plasma/desktop/shell/main.cpp:120
#84 0x00007f6aefd1630d in __libc_start_main (main=0x400640 <main(int, char**)>, argc=1, ubp_av=0x7fff663b4b08, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff663b4af8) at libc-start.c:226
#85 0x0000000000400671 in _start ()

Reported using DrKonqi
Comment 1 Craig Magina 2012-01-10 15:47:46 UTC
I can confirm this on Kubuntu 12.04 with KDE SC 4.7.97 and Qt 4.7.4 using the same steps.
Comment 2 Anne-Marie Mahfouf 2012-01-10 18:55:55 UTC
Craig, same backtrace? also using nvidia?
Comment 3 Andreas Kuhl 2012-01-12 19:28:31 UTC
Created attachment 67749 [details]
New crash information added by DrKonqi

plasma-desktop (0.4) on KDE Platform 4.7.97 (4.8 RC2 (4.7.97) "release 1" using Qt 4.8.0

- What I was doing when the application crashed:

Plasma crashed when I was trying to add a custom icon to an activity.

-- Backtrace (Reduced):
#10 0x00007f469a289e15 in QObjectPrivate::deleteChildren (this=0x3d4c100) at kernel/qobject.cpp:1917
#11 0x00007f469942ab90 in QWidget::~QWidget (this=0x480f320, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1675
#12 0x00007f469c854ec9 in KIconDialog::~KIconDialog (this=0x480f320, __in_chrg=<optimized out>) at /usr/src/debug/kdelibs-4.7.97/kio/kfile/kicondialog.cpp:490
#13 0x00007f469d8b1ddc in ActivityConfiguration::~ActivityConfiguration (this=<optimized out>, __in_chrg=<optimized out>) at /usr/src/debug/kde-workspace-4.7.97/plasma/desktop/shell/activitymanager/activitycontrols.cpp:137
#14 0x00007f469d8b1e89 in ActivityConfiguration::~ActivityConfiguration (this=0x1b20cc0, __in_chrg=<optimized out>) at /usr/src/debug/kde-workspace-4.7.97/plasma/desktop/shell/activitymanager/activitycontrols.cpp:140
Comment 4 David E. Narvaez 2012-01-24 03:51:42 UTC
I can confirm this on Gentoo with Qt 4.8.0 and plasma-workspace 4.7.95
Comment 5 Sascha Manns 2012-01-29 16:46:02 UTC
Created attachment 68303 [details]
New crash information added by DrKonqi

plasma-desktop (0.4) on KDE Platform 4.8.00 (4.8.0 "release 462" using Qt 4.8.0

- What I was doing when the application crashed:
I've just tried to change the Activityicon to a custom icon.

-- Backtrace (Reduced):
#9  0x00007f83bae7ae15 in QObjectPrivate::deleteChildren (this=0x4d22100) at kernel/qobject.cpp:1917
#10 0x00007f83ba01bb90 in QWidget::~QWidget (this=0x4f44e00, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1675
#11 0x00007f83b409ecd9 in KIconDialog::~KIconDialog (this=0x4f44e00, __in_chrg=<optimized out>) at /usr/src/debug/kdelibs-4.8.0/kio/kfile/kicondialog.cpp:490
#12 0x00007f83a799fdac in ActivityConfiguration::~ActivityConfiguration (this=<optimized out>, __in_chrg=<optimized out>) at /usr/src/debug/kde-workspace-4.8.0/plasma/desktop/shell/activitymanager/activitycontrols.cpp:137
#13 0x00007f83a799fe59 in ActivityConfiguration::~ActivityConfiguration (this=0x3ab0660, __in_chrg=<optimized out>) at /usr/src/debug/kde-workspace-4.8.0/plasma/desktop/shell/activitymanager/activitycontrols.cpp:140
Comment 6 Elias Probst 2012-02-03 22:53:20 UTC
Could someone make sure, this isn't a DUP of the already closed bug#288788
Comment 7 Anne-Marie Mahfouf 2012-02-04 20:25:43 UTC
Elias, if so, the bug would not be in KDE 4.8 as the fix was committed before 4.9.0 was out.
Comment 8 Elias Probst 2012-02-05 00:51:55 UTC
(In reply to comment #7)
> Elias, if so, the bug would not be in KDE 4.8 as the fix was committed before
> 4.9.0 was out.

The fix actually also went into the 4.8 branch, see the commit log here:
https://projects.kde.org/projects/kde/kde-workspace/repository/show/plasma/desktop/shell/activitymanager?rev=KDE%2F4.8
Comment 9 Anne-Marie Mahfouf 2012-02-05 08:17:29 UTC
I mean that Sascha should not have the bug if it was fixed before 4.8.0 was out. The tarballs were done around mid January for 4.8.0
Comment 10 Elias Probst 2012-02-05 13:37:57 UTC
(In reply to comment #9)
> I mean that Sascha should not have the bug if it was fixed before 4.8.0 was
> out. The tarballs were done around mid January for 4.8.0

Thanks for pointing that out - I didn't realise there was a report based on 4.8.0.
Comment 11 Aaron J. Seigo 2012-02-10 08:07:24 UTC
Git commit 08c2b0af5e8f479f18063ca7a550ceb7fe7280c1 by Aaron Seigo.
Committed on 10/02/2012 at 09:06.
Pushed by aseigo into branch 'KDE/4.8'.

check not only the widget itself, but all of its parents
REVIEW:103858

M  +12   -1    plasma/desktop/shell/controllerwindow.cpp

http://commits.kde.org/kde-workspace/08c2b0af5e8f479f18063ca7a550ceb7fe7280c1
Comment 12 Aaron J. Seigo 2012-02-10 08:07:31 UTC
Git commit 6d595cff08fee76571fba5aef23bebdd1f33a725 by Aaron Seigo.
Committed on 10/02/2012 at 09:06.
Pushed by aseigo into branch 'master'.

check not only the widget itself, but all of its parents
REVIEW:103858

M  +12   -1    plasma/desktop/shell/controllerwindow.cpp

http://commits.kde.org/kde-workspace/6d595cff08fee76571fba5aef23bebdd1f33a725
Comment 13 Jekyll Wu 2012-02-15 02:43:47 UTC
*** Bug 294115 has been marked as a duplicate of this bug. ***