check not only the widget itself, but all of its parents

BUG:291075
REVIEW:103858